Fix #97049: Auto-keyframing warning message shows on top of navigator

- Broken for "Simple Axis" (USER_MINI_AXIS_TYPE_MINIMAL), falls back
 to the same offset as USER_MINI_AXIS_TYPE_GIZMO